--- a/_pages/projects-archive.html
+++ b/_pages/projects-archive.html
@@ -8,7 +8,7 @@ author_profile: true
 {% include base_path %}
 
 <div class="grid__wrapper">
-  {% for post in site.projects %}
-    {% include archive-single.html type="grid" %}
+  {% for post in site.projects reversed %}
+    {% include project-archive-single.html type="grid" %}
   {% endfor %}
 </div>
